<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="8dp"
    app:cardBackgroundColor="@color/primary_light"
    android:elevation="2dp"

    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/week_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_week_turn"
            android:textColor="@color/primary_dark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_margin="8dp"
            android:contentDescription="@string/profile_picture"
            android:foregroundGravity="center"
            app:layout_constraintStart_toStartOf="@id/week_view"
            app:layout_constraintTop_toBottomOf="@id/week_view"
            android:src="@drawable/ic_profile" />


        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_picture"
            app:layout_constraintTop_toTopOf="@+id/profile_picture"
            tools:text="Dummy" />

        <Button
            android:background="@drawable/button_style"
            android:id="@+id/clean_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_clean"
            android:focusableInTouchMode="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/clean_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"/>

        <ImageView
            android:id="@+id/clean_pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_brush"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
